Fix overlapping footer on Age page

--- a/src/components/atoms/_wrapper.scss
+++ b/src/components/atoms/_wrapper.scss
@@ -2,8 +2,8 @@
 
 .wrapper {
   display: grid;
-  height: 100%;
   grid-template-columns: 1fr;
+  height: 100vh;
   overflow-y: scroll;
   &__twoRowGrid {
     grid-template-rows: 1fr auto;
