--- a/src/components/pages/_age.scss
+++ b/src/components/pages/_age.scss
@@ -34,6 +34,7 @@ span {
 
 .ageMain {
   margin: 0 1rem;
+
   @media all and (min-width: 768px) {
     width: 80%;
     margin: 0 auto;
@@ -138,6 +139,7 @@ li::before {
     display: inline-block;
     background-size: contain;
     width: 1.5em;
+    height: 1.5em;
     margin: 0 0.5rem 0.5rem 0.5rem;
     content: url(../../images/icon-thumb-up.svg);
   }
